##Text encoding: utf-8

2009-07-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/structs.h: add support for better text underline, strikethrough
	and overline.
	* libs/gccv/text-tag.cc: ditto.
	* libs/gccv/text-tag.h: ditto.
	* libs/gcp/text.cc: ditto.
	* plugins/paint/text/texttool.cc: ditto.
	* plugins/paint/text/texttool.h: ditto.

2009-07-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/chem3ddoc.cc: ues Matrix::glmult.
	* libs/gcu/crystaldoc.cc: completed cif files loading and removed OpenBabel
	dependency.
	* libs/gcu/crystaldoc.h: ditto.
	* libs/gcu/matrix.cc: add Matrix::glmult to take OpenGL axes orientation
	and removed OpenBabel dependency.
	* libs/gcu/matrix.h: ditto.
	* libs/gcu/objprops.h: add authors related properties.
	* libs/gcu/spacegroup.cc: added missing header.
	* plugins/loaders/cif/cif.cc: import now works even if not perfect.
	* plugins/loaders/cml/cml.cc: start work on crystal support.
	* programs/crystal/application.cc: removed OpenBabel dependency.
	* programs/crystal/application.h: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.

2009-07-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/structs.h: add an enum for text decoration type.
	* libs/gccv/text.cc: fix selection in multiline texts.
	* libs/gcp/text.cc: fix text color loading.
	* plugins/paint/text/texttool.cc: don't use duplicate accelerators.

2009-07-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-client.h: add methods for interline and justification
	changes notifications.
	* libs/gccv/text.cc: manage interline and fix various issues.
	* libs/gccv/text.h: ditto.
	* libs/gcp/text.cc: make interline and justification persistents.
	* libs/gcp/text.h: ditto.
	* plugins/paint/text/texttool.cc: add shortcuts to change justification
	and interline.

2009-07-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text-tag.cc: removed interline property from NewLineTag.